syntax = "proto3";

option go_package = "github.com/audrenbdb/algorithm-microsrv/pb";

service Solve {
    rpc FizzBuzz(FizzBuzzRequest) returns (FizzBuzzResponse) {}
}

message FizzBuzzRequest {
    int32 puzzleLength = 1;
}

message FizzBuzzResponse {
    string solution = 1;
}